Bugfix: title/dependencies no longer visible after toggling slideshow at the begining of session

--- a/assets/css/js_interop.css
+++ b/assets/css/js_interop.css
@@ -389,4 +389,8 @@ server in solely client-side operations.
       @apply my-0;
     }
   }
+
+  [data-js-notebook-content-slideshow] > *:not([data-el-sections-container]) {
+      @apply hidden;
+  }
 }
